# PRISM

./: README.md
PRISM/: README.md  ep_types_gpu.h
PRISM/CPU_version/: CMakeLists.txt  Makefile  main.cpp  results.csv  run_cpu_bash.sh  utils.cpp  utils.h
PRISM/GPU_version/: CMakeLists.txt  gpu_optimized_app.cu  gpu_optimized_app.hpp  main_gpu_correct.cu  run_gpu_bash.sh
PRISM/GPU_with_encoding/: CMakeLists.txt  enc_config.json  run_runtime_pipeline.py  run_runtime_pipeline.sh  runtime_pipeline.cpp
PRISM/GPU_with_encoding/include/: epicap_gpu_runtime.hpp  recon_encoder.hpp
PRISM/GPU_with_encoding/src/: gpu_kernels.cu  gpu_kernels.hpp  recon_encoder.cpp  runtime.cpp
coq/: VideoProcessor.v  redflash.v
rocq/: README.md  flash_area_new.v  flash_frequency.v  luminance_new.v
